# -strava_analytics

./: .gitignore  ESTRUTURA_APRESENTACAO.txt  La_Mis_on_35km.gpx  La_Mision_80km.gpx  README.md  analise_exploratoria_percurso.ipynb  analise_exploratoria_percurso_reberton copy.ipynb  analise_exploratoria_percurso_reberton.ipynb  analises_corredores.ipynb  analises_finais.html  analises_finais.ipynb  analises_provas.ipynb  analises_provas_html.html  bkp_funcoes.py  dados_2023.csv  dados_2023_FINAL_SEM_ERRO.csv  dados_TESTE.csv  dados_TESTE_1007.csv  dados_atletas.csv  dados_atletas_2seg_p1.csv  dados_strava_final.csv  df_agregado_por_atleta.csv  df_atletas_concat.csv  df_atletas_filtrado.csv  df_completo_final.csv  df_percurso_final.csv  final_completo_dados_2022_P1.csv  final_completo_dados_2023.csv  final_completo_dados_2023_FINAL_SEM_ERRO.csv  gpx_35km_reberton.gpx  gpx_strava.ipynb  gpx_strava_35km_atu.ipynb  pyproject.toml  scraping.py  slide_12_grafico_radar_plotly.json  tabela_final_lsmision_35km.csv  tabela_final_lsmision_35km_atualizado.csv  tabela_final_lsmision_35km_reberton.csv  tabela_final_lsmision_35km_ultima.csv  tratamento_todos_dados.ipynb  (+2 more)
Dados/: dados_2022_P1.csv  df_atletas_concat.csv  df_selecionado_segundos.csv
Escrita/Projeto_TCC_FINAL/: estilo.sty  principal.bcf  principal.run.xml  principal.tex
Escrita/Projeto_TCC___Relatorio_Parcial/: Cronograma.tex  Justificativa.tex  Metodologia.tex  Resultados.tex  bibliografia.bib  descricao_atividades_avaliacao.tex  estilo.sty  principal.tex  resltados_parciais.tex
(+17 files in other folders)
