[project]
name = "strava-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "joaomm",email = "joaomarcos1296@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-posthocs (>=0.11.4,<0.12.0)",
    "pingouin (>=0.5.5,<0.6.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

